# routes/analytics.js
@@ -3,8 +3,9 @@ const router = express.Router();
 const Stream = require("../schema/stream");
 const Metrics = require("../schema/metrics");
 const View = require("../schema/view");
+const User = require("../schema/user");
 
-
+// Metriche per singolo stream
 router.get('/streams', async (req, res) => {
     const id = req.query.id;
     const views = await View.find({streamId: id});
@@ -21,31 +22,11 @@ router.get('/streams', async (req, res) => {
         ]
     );
     const aggregatedMetric = metrics[0];
-    aggregatedMetric.totalViews = views.length;
+    aggregatedMetric.viewList = views;
+
+    // aggregatedMetric.totalViews = views.length;
     res.status(200).json(aggregatedMetric);
 });
-
-async function getMediaChanges(sessionId, streamId) {
-    const metrics = await Metrics.aggregate(
-        [
-            { $match: { sessionId: sessionId, streamId: streamId, trigger: "mediaChange" } },
-            { $project: { level: "$mediaLevel.level", resolution: "$mediaLevel.resolution", duration: "$mediaLevel.duration" } },
-            { $group: { _id: "$level", duration: { $sum: "$duration" } } }
-        ]
-    );
-    return metrics;
-}
-
-async function getScreenSizes(sessionId, streamId) {
-    const metrics = await Metrics.aggregate(
-        [
-            { $match: { sessionId: sessionId, streamId: streamId } },
-            { $group: { _id: "$screenSize" } },
-        ]
-    );
-    return metrics;
-}
-
 
 router.get('/sessions', async (req, res) => {
     // Extract client IP address and user agent
@@ -55,34 +36,52 @@ router.get('/sessions', async (req, res) => {
     // Extract session ID from cookies
     const sessionId = req.query.id || req.session.id;
 
-
-    const metrics = await Metrics.aggregate(
-        [
+    const metrics = await Metrics.aggregate([
             { $match: { sessionId: sessionId } },
             { $sort: { timestamp: -1 } },
-            { $group: { _id: "$streamId", metrics: { $first: "$$ROOT" } } },
-            { $group: {
-                    _id: "$metrics.streamId",
-                    totalStreamedBytes: { $sum: "$metrics.downloadedBytes" } ,
-                    totalStreamedTime: { $sum: "$metrics.streamedTime" } ,
-                    rebufferingEvents: { $sum: { $size: "$metrics.bufferings" } },
-                    rebufferingTime: { $sum: { $sum: "$metrics.bufferings.duration" } }
-                } }
-        ]
-    );
+            {
+                $group: {
+                    _id: {
+                        streamId: '$streamId',
+                        mediaLevel: '$mediaLevel.level',
+                    },
+                    totalStreamedTime: { $sum: '$streamedTime' },
+                    totalStreamedBytes: { $sum: '$downloadedBytes' },
+                    bufferingEvents: { $sum: { $size: '$bufferings' } },
+                    bufferingTime: { $sum: { $sum: '$bufferings.duration' } },
+                    screenSizes: { $addToSet: '$screenSize' },
+                    downloadRate: { $avg: '$downloadRate' },
+                    bandwidth: { $avg: '$bandwidth' },
+                },
+            },
+            {
+                $group: {
+                    _id: '$_id.streamId', // Group by streamId
+                    mediaLevels: {
+                        $push: {
+                            level: '$_id.mediaLevel',
+                            totalStreamedTime: '$totalStreamedTime',
+                        },
+                    },
+                    totalStreamedTime: { $sum: '$totalStreamedTime' },
+                    totalStreamedBytes: { $sum: '$totalStreamedBytes' },
+                    bufferingEvents: { $sum: '$bufferingEvents' },
+                    bufferingTime: { $sum: '$bufferingTime' },
+                    screenSizes: { $addToSet: '$screenSizes' },
+                    downloadRate: { $avg: '$downloadRate' },
+                    bandwidth: { $avg: '$bandwidth' },
+                },
 
-    let aggregatedMetrics = [];
-    for (let metric of metrics) {
-        metric.levels = await getMediaChanges(sessionId, metric._id);
-        for (let level of metric.levels) {
-            level.duration = level.duration / metric.totalStreamedTime * 100;
-        }
-        metric.screenSizes = await getScreenSizes(sessionId, metric._id);
-        for (let i = 0; i < metric.screenSizes.length; i++) {
-            metric.screenSizes[i] = metric.screenSizes[i]._id.width + "x" + metric.screenSizes[i]._id.height;
+            },
+    ]);
+
+    for (const metric of metrics) {
+        metric.screenSizes = metric.screenSizes.flat();
+        let total
+        for (const mediaLevel of metric.mediaLevels) {
+            mediaLevel['%totalStreamedTime'] = mediaLevel.totalStreamedTime / metric.totalStreamedTime * 100;
         }
     }
-
     res.status(200).json(metrics);
 });
 
